--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
 			<div class="contain">
 			  <h2 class="section-title">Pelajaran</h2>
 			  <div class="contents-item">
-				<img src="gambar/html.svg">
+				<img src="html.svg">
 				<p>HTML & CSS</p>
 			</div>
 			<div class="contain">
 			  <div class="contents-item">
-				<img src="gambar/php.svg">
+				<img src="php.svg">
 				<p>PHP</p>
 			</div>
 			<div class="contain">
 			  <div class="contents-item">
-				<img src="gambar/ruby.svg">
+				<img src="ruby.svg">
 				<p>Ruby</p>
 			</div>
 			<div class="contain">
 			  <div class="contents-item">
-				<img src="gambar/swift.svg">
+				<img src="swift.svg">
 				<p>Swift</p>
 			</div>
 			<div class="contain-form">
